fixed footer - removed whitespace

--- a/static/css/local.css
+++ b/static/css/local.css
@@ -210,57 +210,16 @@ label{
     float:left;
     width:100%;
     height:calc(100vh - 40px);
-     position:absolute;
+    padding:0;
+    position:absolute;
     top:0;
     left:0; 
-
-    /* display:flex;
-    flex-direction:column;
-    height:100%;
-
-    width: 100%; */
-    /* height: auto; */
-    /* position:absolute;
-    top:0;
-    left:0; */
     color: white;
     background-color:var(--mentea-generic-bg); 
-    /* ADD493 */
 }
 .bg-child-block {
     height:100%;
     width: 100%; 
-}
-
-.bg-block-main-brown {
-    height:150px;
-    /* flex-grow:1;
-    height:0;
-    overflow:scroll;
-*/
-    width: 100%; 
-    /* height: 1000px; */
-    /* position:absolute;
-    top:800px;
-    left:0; */
-    color: white;
-    background-color: #FFCC99; 
-}
-
-.bg-block-main-light {
-    height:150px;
-    /* flex-grow:1;
-    height:0;
-    overflow:scroll; */
-
-    width: 100%;
-    /* width: 100%;
-    height: 1000px;
-    position:absolute;
-    top:1600px;
-    left:0; */
-    color: white;
-    background-color: #D2F1A5; 
 }
 
 .bg-text-boxes-homepage {
